--- a/web/index.html
+++ b/web/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <div id="voice"></div>
         <div id="player-hud-container">
             <div id="health-container" class="hud-field"><i class='fas fa-heartbeat hud-icon'></i><div id="health"></div></div>
             <div id="armor-container" class="hud-field"><i class='fas fa-shield-alt hud-icon'></i><div id="armor"></div></div>
@@ -24,5 +25,6 @@
             <div id="street2"></div>
             <div id="direction"></div>
         </div>
+        <div id="settings-panel"></div>
     </body>
 </html>
