Added 2k and 4k support, remove unnecessary code

--- a/web/index.html
+++ b/web/index.html
@@ -1,24 +1,39 @@
 <html>
     <head>
         <title>MT HUD</title>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free/css/all.min.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free/css/all.min.css" />
         <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
         <script src="app.js"></script>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="style.css" />
     </head>
     <body>
         <div id="voice"></div>
         <div id="player-hud-container">
-            <div id="health-container" class="hud-field"><i class='fas fa-heartbeat hud-icon'></i><div id="health"></div></div>
-            <div id="armor-container" class="hud-field"><i class='fas fa-shield-alt hud-icon'></i><div id="armor"></div></div>
-            <div id="thirst-container" class="hud-field"><i class='fas fa-bottle-water hud-icon'></i><div id="thirst"></div></div>
-            <div id="hunger-container" class="hud-field"><i class='fas fa-drumstick-bite hud-icon'></i><div id="hunger"></div></div>
-            <div id="stamina-container" class="hud-field"><i class='fas fa-running hud-icon'></i><div id="stamina"></div></div>
+            <div id="health-container" class="hud-field">
+                <i class="fas fa-heartbeat hud-icon"></i>
+                <div id="health"></div>
+            </div>
+            <div id="armor-container" class="hud-field">
+                <i class="fas fa-shield-alt hud-icon"></i>
+                <div id="armor"></div>
+            </div>
+            <div id="thirst-container" class="hud-field">
+                <i class="fas fa-bottle-water hud-icon"></i>
+                <div id="thirst"></div>
+            </div>
+            <div id="hunger-container" class="hud-field">
+                <i class="fas fa-drumstick-bite hud-icon"></i>
+                <div id="hunger"></div>
+            </div>
+            <div id="stamina-container" class="hud-field">
+                <i class="fas fa-running hud-icon"></i>
+                <div id="stamina"></div>
+            </div>
         </div>
         <div id="vehicle-hud-container">
-            <div id="speed-type">KMH</div>
+            <div id="speed-type">MPH</div>
             <div id="speed"></div>
-            <div id="fuel-icon"><i class='fas fa-gas-pump'></i></div>
+            <div id="fuel-icon"><i class="fas fa-gas-pump"></i></div>
             <div id="fuel"></div>
             <div id="gear"></div>
             <div id="street1"></div>
