--- a/web/index.html
+++ b/web/index.html
@@ -42,6 +42,8 @@
         <div id="street1"></div>
         <div id="street2"></div>
         <div id="direction"></div>
+        <div id="alt-txt"></div>
+        <div id="altitude"></div>
     </div>
 </body>
 
